<resources>
    <string name="app_name">A2 Notes</string>
    <string name="search_notes">Search Your Notes</string>
    <string name="a2_notes">A2 Notes</string>
    <string name="subtitle">Subtitle</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here...</string>
    <string name="notes_color">Notes Color</string>
    <string name="notes">Notes</string>
</resources>