<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/mainTheme"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:includeFontPadding="false"
        android:text="@string/a2_notes"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/boxer"
        android:backgroundTint="@color/search"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/appName"
        >
        <ImageView
            android:id="@+id/searchIcon"
            android:layout_marginStart="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:tint="@color/icons"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/app_name"/>
        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/search_notes"
            android:includeFontPadding="false"
            android:autofillHints="@null"
            android:fontFamily="@font/ubuntu_medium"
            android:inputType="text"
            android:textColorHint="@color/textHint"
            android:textSize="15sp"
            android:focusable="true"
            android:focusableInTouchMode="true"

            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@id/baseline"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>
    <LinearLayout
        android:id="@+id/baseline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent">
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/backround_add"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/baseline"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>